--- a/website/_layouts/post.html
+++ b/website/_layouts/post.html
@@ -20,12 +20,6 @@ layout: default
 
     {{ content }}
 
-    <section id="comments">
-        <h2>
-            Comments
-        </h2>
-
-        {% include disqus-comments.html %}
-    </section>
+    {% include page-comments.html %}
 
 </article>
