--- a/website/_assets/cv.css
+++ b/website/_assets/cv.css
@@ -80,7 +80,7 @@ body
 {
     body
     {
-        background: #eee;
+        background: #444;
         margin: 1em;
     }
     .options
@@ -92,7 +92,7 @@ body
     .options a
     {
         padding: 0.25em;
-        color: #666;
+        color: #fff;
     }
     .options a:hover, .options a:focus
     {
@@ -103,7 +103,7 @@ body
         width: 8.27in;
         margin: 1em auto 3em auto;
         padding: 2em;
-        box-shadow: 0em 0em 3em #999;
+        box-shadow: 0em 0em 3em #000;
     }
 }
 
@@ -205,6 +205,7 @@ a
     margin-top: -0.1em;
     padding: 0em 0.5em 0em 0em;
     color: #369;
+    font-size: 1.2rem;
 }
 .section .content
 {
