--- a/website/_assets/layout.css
+++ b/website/_assets/layout.css
@@ -85,7 +85,9 @@ body
 {
     float: right;
     margin: 0 0 1em 1em;
-    max-height: 8em;
+    width: 12rem;
+    height: 12rem;
+    object-fit: contain;
 }
 
 .sr-only
@@ -391,7 +393,6 @@ main a
 
 main p
 {
-    text-align: justify;
 }
 
 main a:hover,
@@ -505,6 +506,11 @@ h1
     margin: 0.5em 0 0 0;
 }
 
+#home > h1:nth-child(n+2)
+{
+    margin-top: 2rem;
+}
+
 #home article h1 a
 {
     text-decoration: none;
@@ -514,7 +520,7 @@ h1
 {
     #home article .post-thumb
     {
-        margin-top: -2em;
+        margin-top: -4.5rem;
     }
 }
 
@@ -524,6 +530,7 @@ h1
 
 .pagination
 {
+    display: none;
     padding: 0.5em;
     text-align: center;
 }
@@ -555,6 +562,7 @@ main article time
 
 main article h2
 {
+    clear: both;
 }
 
 
