--- a/website/_assets/icomoon/style.css
+++ b/website/_assets/icomoon/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'icons';
-  src:  url('/assets/icons/icons.eot?7duqr0');
-  src:  url('/assets/icons/icons.woff2?7duqr0') format('woff2'),
-        url('/assets/icons.eot?7duqr0#iefix') format('embedded-opentype'),
-        url('/assets/icons/icons.ttf?7duqr0') format('truetype'),
-        url('/assets/icons/icons.woff?7duqr0') format('woff'),
-        url('/assets/icons/icons.svg?7duqr0#icons') format('svg');
+  src:  url('/assets/icons/icons.eot');
+  src:  url('/assets/icons/icons.woff2') format('woff2'),
+        url('/assets/icons.eot') format('embedded-opentype'),
+        url('/assets/icons/icons.ttf') format('truetype'),
+        url('/assets/icons/icons.woff') format('woff'),
+        url('/assets/icons/icons.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -28,17 +28,11 @@
 .icon-home:before {
   content: "\e900";
 }
-.icon-headphones:before {
-  content: "\e910";
-}
 .icon-books:before {
   content: "\e920";
 }
 .icon-file-text2:before {
   content: "\e926";
-}
-.icon-folder-open:before {
-  content: "\e930";
 }
 .icon-phone:before {
   content: "\e942";
@@ -46,6 +40,9 @@
 .icon-lab:before {
   content: "\e9aa";
 }
-.icon-airplane:before {
-  content: "\e9af";
+.icon-earth:before {
+  content: "\e9ca";
+}
+.icon-mail4:before {
+  content: "\ea86";
 }
