--- a/website/_includes/socials.html
+++ b/website/_includes/socials.html
@@ -14,6 +14,9 @@
     <a title="Strava" href="https://www.strava.com/athletes/marcuscraske">
         Strava
     </a>
+    <a title="Mastodon" href="https://hachyderm.io/@marcuscraske" target="_blank">
+        Mastodon
+    </a>
     <a title="E-mail" href="mailto:contact@marcuscraske.com" target="_blank">
         E-mail
     </a>
