--- a/website/_assets/layout.css
+++ b/website/_assets/layout.css
@@ -126,7 +126,9 @@ body
 
 .wrapper-header
 {
-    padding: 1em;
+    background: url("/assets/background/background-ai.webp") no-repeat center;
+    background-size: cover;
+    padding: 10rem 2rem 0rem 2rem;
 }
 
 .wrapper-header header,
@@ -134,6 +136,11 @@ body
 {
     width: 60em;
     margin: auto;
+}
+
+.wrapper-header nav
+{
+    background: rgba(0, 0, 0, 0.6);
 }
 
 .wrapper-header h1
@@ -171,7 +178,7 @@ body
 .wrapper-header a:focus,
 .wrapper-header a.selected
 {
-    color: #4286f4;
+    color: #337df6;
 }
 
 
@@ -226,9 +233,14 @@ body
         width: auto;
     }
 
-    .wrapper-header header
+    .wrapper-header header,
+    .wrapper-header nav
     {
         width: auto;
+    }
+
+    .wrapper-header header
+    {
         font-size: 0.8em;
     }
 }
@@ -313,7 +325,7 @@ footer ul li a
 footer ul li a:hover,
 footer ul li a:focus
 {
-    color: #186BF2;
+    color: #337df6;
 }
 
 
@@ -399,7 +411,7 @@ main p
 main a:hover,
 main a:focus
 {
-    color: #186BF2;
+    color: #337df6;
 }
 
 main p.center,
